ShowInformation with action

--- a/luminous-fortune-port-forward/package.json
+++ b/luminous-fortune-port-forward/package.json
@@ -1,6 +1,7 @@
 {
   "name": "luminous-fortune-port-forward",
   "displayName": "luminous-fortune-port-forward",
+  "publisher": "Sridhar dscv",
   "description": "Luminous fortune port forwarding extension would likely be designed to ",
   "version": "0.0.1",
   "engines": {
@@ -9,13 +10,26 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand: luminous-fortune-port-forward.startTask"
+  ],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "luminous-fortune-port-forward.port-forward",
-      "title": "Port Forward"
-    }]
+    "commands": [
+      {
+        "command": "luminous-fortune-port-forward.port-forward",
+        "title": "Port Forward"
+      },
+      {
+        "command": "luminous-fortune-port-forward.startTask",
+        "title": "Show Progress"
+      },
+      {
+        "command": "luminous-fortune-port-forward.showWarningWithActions",
+        "title": "Show Warning Notification With Actions",
+        "category": "Notifications Sample"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
@@ -23,13 +37,16 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.82.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.82.0",
+    "@vscode/test-electron": "^2.3.4",
     "eslint": "^8.47.0",
     "glob": "^10.3.3",
     "mocha": "^10.2.0",
-    "typescript": "^5.1.6",
-    "@vscode/test-electron": "^2.3.4"
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "net": "^1.0.2"
   }
 }
